[package]
name = "houtu"
version = "0.0.1"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]



[dependencies]
houtu_3d_tiles = { path = "crates/houtu_3d_tiles" }

bevy = { version = "0.11.3", default-features = false, features = ["bevy_winit", "bevy_render", "x11", "bevy_asset"] }
serde_json = "1.0.107"

[dev-dependencies]
bevy_egui = "0.22.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3