[package]
name = "houtu_3d_tiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houtu_utility = { path = "../houtu_utility" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }