[package]
name = "houtu_3d_tiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houtu_3d_tiles_serde = { path = "../houtu_3d_tiles_serde" }
bevy = { version = "0.11.3",default-features = false, features = ["bevy_winit", "bevy_render", "x11", "bevy_asset"] }
bevy_http_client = "0.1.0"
serde_json = "1.0.107"
url = "2.4.1"