[package]
name = "houtu_3d_tiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = { workspace = true, features = ["bevy_winit", "bevy_render", "x11", "bevy_asset"] }
bevy_http_client = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
strum = "0.25"
strum_macros = "0.25"
url = "2.4.1"
