[package]
name = "houtu_resource"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy = { workspace = true }
bevy_http_client = "0.1.0"
reqwest = { version = "0.11.20", features = ["json"] }
url = "2.4.1"
serde_json = { version = "1.0.107", features = [] }
